# SmartMemo-Desktop-App-tuari

./: README.md  next.config.ts  package-lock.json  package.json
hooks/: useAudioRecorder.ts  useDragHandler.ts  useMemo.ts  useSpeak.ts  useWindowResize.ts
lib/: memo-store.ts
services/: audioRecorder.ts  geminiServices.ts  indexedDbService.ts
src-tauri/: Cargo.toml  tauri.conf.json  voice_memos.db  voice_memos1.db  voice_memos2.db
src-tauri/icons/: icon.icns
src-tauri/src/: api_key_ops.rs  db.rs  events.rs  gemini.rs  lib.rs  main.rs  memo_ops.rs  models.rs  user_ops.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/analytics/: page.tsx
src/app/auth/: page.tsx
src/app/helper/: page.tsx  style.css
src/app/memos/: page.tsx
src/app/record/: page.tsx
src/app/settings/: page.tsx
src/components/: AppSidebar.tsx  AuthScreen.tsx  EditMemoForm.tsx  ElevenLabsVoiceSettings.tsx  EmptyState.tsx  LoadingScreen.tsx  LoadingSpinner.tsx  MemoActions.tsx  MemoCard.tsx  MemoContent.tsx  MemoFilters.tsx  MemoHeader.tsx  MemoList.tsx  MemoTags.tsx  RecorderInterface.tsx  RootApp.tsx  SettingsInterface.tsx  SummarizeButton.tsx  TranscribeButton.tsx  TranslateButton.tsx  analytics-dashboard.tsx  app-navbar.tsx  waveform.tsx
src/components/Helper_components/: CompactMicButton.tsx  DynamicIslandMic.tsx  RecordingInterface.tsx  TranscribeButton.tsx  transcribe-component.tsx
src/components/ui/: chart.tsx  clickeffect.tsx
src/context/: ElevenLabsContext.tsx
src/hooks/: use-toast.ts
styles/: globals.css
